--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 		<script type="text/javascript">
-			var back_redirect_back_link = 'https://lotofacildominada.com/exit-167/';
+			var back_redirect_back_link = 'https://lotofacildominada.github.io/exit16/';
 
 			history.pushState({},"",location.href);
 		    history.pushState({},"",location.href);
