--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript">
+var query = location.search.slice(1);
+var partes = query.split('&');
+var data = {};
+partes.forEach(function (parte) {
+    var chaveValor = parte.split('=');
+    var chave = chaveValor[0];
+    var valor = chaveValor[1];
+    data[chave] = valor;
+});
+
+var url = data['src'];
+
+     $(document).ready(function () {
+        $('.custom-url').attr('href', "https://go.perfectpay.com.br/PPU38CK4AM0?src=" + url);
+});
+
+
+</script>
 <script type="text/javascript">
 var query = location.search.slice(1);
 var partes = query.split('&');
